--- a/index.html
+++ b/index.html
@@ -60,6 +60,10 @@
       </nav>
       <!-- Contact quick-links in header -->
       <div class="flex items-center gap-3 text-xs md:text-sm">
+        <a href="Franklin_De_La_Cruz_Resume.pdf" download class="no-print inline-flex items-center gap-2 rounded-full bg-brand-600 text-white px-3 py-2 font-medium shadow hover:shadow-md hover:bg-brand-700" title="Download PDF résumé">
+          <svg class="w-4 h-4" viewBox="0 0 24 24" fill="currentColor" aria-hidden="true"><path d="M11 4a1 1 0 0 1 2 0v8.59l2.3-2.3 1.4 1.42L12 17.41 7.3 12.7l1.4-1.42 2.3 2.3V4zM5 19h14v2H5v-2z"/></svg>
+          <span class="hidden sm:inline">Download Résumé</span><span class="sm:hidden">Résumé</span>
+        </a>
         <a href="tel:+14078813797" class="inline-flex items-center gap-1 px-2 py-1 rounded-full border border-slate-300 dark:border-slate-700"><span class="sr-only">Phone</span><svg class="w-4 h-4" viewBox="0 0 24 24" fill="currentColor"><path d="M6.6 10.8a15.5 15.5 0 0 0 6.6 6.6l2.2-2.2a1 1 0 0 1 1-.25c1.1.36 2.3.55 3.6.55a1 1 0 0 1 1 1V20a1 1 0 0 1-1 1C10.3 21 3 13.7 3 4a1 1 0 0 1 1-1h3.5a1 1 0 0 1 1 1c0 1.3.19 2.5.55 3.6a1 1 0 0 1-.25 1L6.6 10.8z"/></svg>(407) 881‑3797</a>
         <a href="mailto:franklin.delacruz2@gmail.com" class="inline-flex items-center gap-1 px-2 py-1 rounded-full border border-slate-300 dark:border-slate-700"><svg class="w-4 h-4" viewBox="0 0 24 24" fill="currentColor"><path d="M4 6h16a2 2 0 0 1 2 2v.4l-10 5.6L2 8.4V8a2 2 0 0 1 2-2zm0 4.7 8 4.5 8-4.5V18a2 2 0 0 1-2 2H6a2 2 0 0 1-2-2v-7.3z"/></svg>franklin.delacruz2@gmail.com</a>
         <span class="hidden md:inline-flex items-center gap-1 px-2 py-1 rounded-full border border-slate-300 dark:border-slate-700"><svg class="w-4 h-4" viewBox="0 0 24 24" fill="currentColor"><path d="M12 2a7 7 0 0 1 7 7v1a7 7 0 1 1-14 0V9a7 7 0 0 1 7-7zm0 20a9 9 0 0 0 9-9h-2a7 7 0 1 1-14 0H3a9 9 0 0 0 9 9z"/></svg>Dallas, TX</span>
