--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
       </nav>
       <!-- Contact quick-links in header -->
       <div class="flex items-center gap-3 text-xs md:text-sm">
-        <a href="Franklin_De_La_Cruz_Resume.pdf" download class="no-print inline-flex items-center gap-2 rounded-full bg-brand-600 text-white px-3 py-2 font-medium shadow hover:shadow-md hover:bg-brand-700" title="Download PDF résumé">
+        <a href="/documents/Lead Solutions Consultant.pdf" download class="no-print inline-flex items-center gap-2 rounded-full bg-brand-600 text-white px-3 py-2 font-medium shadow hover:shadow-md hover:bg-brand-700" title="Download PDF résumé">
           <svg class="w-4 h-4" viewBox="0 0 24 24" fill="currentColor" aria-hidden="true"><path d="M11 4a1 1 0 0 1 2 0v8.59l2.3-2.3 1.4 1.42L12 17.41 7.3 12.7l1.4-1.42 2.3 2.3V4zM5 19h14v2H5v-2z"/></svg>
           <span class="hidden sm:inline">Download Résumé</span><span class="sm:hidden">Résumé</span>
         </a>
@@ -350,3 +350,4 @@
   <script>document.getElementById('year').textContent = new Date().getFullYear();</script>
 </body>
 </html>
+
