--- a/index.html
+++ b/index.html
@@ -77,8 +77,8 @@
   <section id="home" class="py-16 md:py-24">
     <div class="max-w-6xl mx-auto px-4 grid md:grid-cols-2 gap-10 items-center">
       <div>
-        <h1 class="text-4xl md:text-6xl font-extrabold leading-tight">Presales & AI Specialist
-          <span class="block text-brand-600">Building measurable CX with LLMs</span>
+        <h1 class="text-4xl md:text-6xl font-extrabold leading-tight">Strategic Solutions Consultant
+          <span class="block text-brand-600">Bridging Sales, Tech & AI</span>
         </h1>
         <p class="mt-6 text-lg text-slate-600 dark:text-slate-300">Strategic presales partner specializing in AI-driven solutions, enterprise demos, and technical validation to deliver outcomes: containment, AHT reduction, CSAT lift, and revenue impact.</p>
         <div class="mt-8 flex flex-wrap gap-3">
@@ -350,4 +350,5 @@
   <script>document.getElementById('year').textContent = new Date().getFullYear();</script>
 </body>
 </html>
+
 
