--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
         <div class="aspect-video rounded-3xl bg-gradient-to-br from-brand-200 to-brand-500/40 dark:from-brand-400/20 dark:to-brand-800/30 p-2">
           <div class="w-full h-full rounded-2xl bg-white/60 dark:bg-slate-900/60 border border-slate-200 dark:border-slate-800 flex items-center justify-center text-center p-4">
             <!-- Replace with your media: -->
-            <!-- <img src="headshot.jpg" alt="Franklin De La Cruz" class="w-full h-full object-cover rounded-xl"/> -->
+            <img src="/assets/images/fdlcheadshot.jpg" alt="Franklin De La Cruz" class="w-full h-full object-cover rounded-xl"/> -->
             <!-- or: -->
             <!-- <video controls poster="poster.jpg" class="w-full h-full rounded-xl"><source src="intro.mp4" type="video/mp4"/></video> -->
             <p class="text-slate-600 dark:text-slate-300 text-sm md:text-base">Drop an image or demo video here (replace this box with an <code>&lt;img&gt;</code> or <code>&lt;video&gt;</code> tag).</p>
@@ -350,6 +350,7 @@
   <script>document.getElementById('year').textContent = new Date().getFullYear();</script>
 </body>
 </html>
+
 
 
 
