--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
             <img src="/assets/images/fdlcheadshot.jpg" alt="Franklin De La Cruz" class="w-full h-full object-cover rounded-xl"/> -->
             <!-- or: -->
             <!-- <video controls poster="poster.jpg" class="w-full h-full rounded-xl"><source src="intro.mp4" type="video/mp4"/></video> -->
-            <p class="text-slate-600 dark:text-slate-300 text-sm md:text-base">Drop an image or demo video here (replace this box with an <code>&lt;img&gt;</code> or <code>&lt;video&gt;</code> tag).</p>
+            <p class="text-slate-600 dark:text-slate-300 text-sm md:text-base"
           </div>
         </div>
         <div class="absolute -bottom-6 -right-6 rotate-2 bg-white dark:bg-slate-900 border border-slate-200 dark:border-slate-800 rounded-2xl p-4 shadow-sm"><p class="text-xs">Available for strategic presales + AI architecture engagements.</p></div>
@@ -350,6 +350,7 @@
   <script>document.getElementById('year').textContent = new Date().getFullYear();</script>
 </body>
 </html>
+
 
 
 
