--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
         <h1 class="text-4xl md:text-6xl font-extrabold leading-tight">Strategic Solutions Consultant
           <span class="block text-brand-600">Bridging Sales, Tech & AI</span>
         </h1>
-        <p class="mt-6 text-lg text-slate-600 dark:text-slate-300">Strategic presales partner specializing in AI-driven solutions, enterprise demos, and technical validation to deliver outcomes.</p>
+        <p class="mt-6 text-lg text-slate-600 dark:text-slate-300">Strategic pre and post-sales partner specializing in AI-driven solutions, SaaS platform design & implementation, enterprise demos, and technical validation to deliver measurable business outcomes.</p>
         <div class="mt-8 flex flex-wrap gap-3">
           <a href="#contact" class="inline-flex items-center rounded-xl bg-brand-600 text-white px-5 py-3 font-medium shadow hover:shadow-md hover:bg-brand-700">Get in touch</a>
           <a href="#experience" class="inline-flex items-center rounded-xl border px-5 py-3 font-medium border-slate-300 dark:border-slate-700">View experience</a>
@@ -94,7 +94,6 @@
             <img src="/assets/images/fdlcheadshot.jpg" alt="Franklin De La Cruz" class="w-full h-full object-cover rounded-xl"/> -->
             <!-- or: -->
             <!-- <video controls poster="poster.jpg" class="w-full h-full rounded-xl"><source src="intro.mp4" type="video/mp4"/></video> -->
-            <p class="text-slate-600 dark:text-slate-300 text-sm md:text-base">
           </div>
         </div>
         <div class="absolute -bottom-6 -right-6 rotate-2 bg-white dark:bg-slate-900 border border-slate-200 dark:border-slate-800 rounded-2xl p-4 shadow-sm"><p class="text-xs">Available for strategic presales + AI architecture engagements.</p></div>
@@ -350,6 +349,7 @@
   <script>document.getElementById('year').textContent = new Date().getFullYear();</script>
 </body>
 </html>
+
 
 
 
