--- a/index.html
+++ b/index.html
@@ -89,14 +89,14 @@
       <!-- Media well: drop in an <img> OR a <video> below -->
       <div class="relative">
         <div class="aspect-video rounded-3xl bg-gradient-to-br from-brand-200 to-brand-500/40 dark:from-brand-400/20 dark:to-brand-800/30 p-2">
-          <div class="w-full h-full rounded-2xl bg-white/60 dark:bg-slate-900/60 border border-slate-200 dark:border-slate-800 flex items-center justify-center text-center p-4">
+          <div class="w-full h-full rounded-2xl bg-white/60 dark:bg-slate-900/60 border border-slate-800 dark:border-slate-800 flex items-center justify-center text-center p-4">
             <!-- Replace with your media: -->
             <img src="/assets/images/fdlcheadshot.jpg" alt="Franklin De La Cruz" class="w-full h-full object-cover rounded-xl"/>
             <!-- or: -->
             <!-- <video controls poster="poster.jpg" class="w-full h-full rounded-xl"><source src="intro.mp4" type="video/mp4"/></video> -->
           </div>
         </div>
-        <div class="absolute -bottom-6 -right-6 rotate-2 bg-white dark:bg-slate-900 border border-slate-200 dark:border-slate-800 rounded-2xl p-4 shadow-sm"><p class="text-xs">Available for strategic presales + AI architecture engagements.</p></div>
+        <div class="absolute -bottom-6 -right-6 rotate-2 bg-white dark:bg-slate-900 border border-slate-200 dark:border-slate-800 rounded-2xl p-4 shadow-sm"><p class="text-xs">Available for strategic presales engagements + Post Sales Implementations.</p></div>
       </div>
     </div>
   </section>
@@ -349,6 +349,7 @@
   <script>document.getElementById('year').textContent = new Date().getFullYear();</script>
 </body>
 </html>
+
 
 
 
