--- a/index.html
+++ b/index.html
@@ -83,16 +83,22 @@
       <!-- Hero (STACKED so headshot is above resume on all screens) -->
       <section class="space-y-10">
         <!-- Media well (Headshot FIRST) -->
-        <div class="relative">
-          <div class="aspect-square rounded-3xl bg-gradient-to-br from-brand-200 to-brand-500/40 dark:from-brand-400/20 dark:to-brand-800/30 p-2">
-            <div class="w-full h-full rounded-2xl bg-white/60 dark:bg-slate-900/90 border border-slate-200 dark:border-slate-800 flex items-center justify-center p-4 overflow-hidden">
-              <img src="/assets/images/fdlcheadshot.jpg" alt="Franklin De La Cruz" class="max-w-[800px] w-full h-full object-contain rounded-xl" />
-            </div>
-          </div>
-          <div class="absolute -bottom-6 right-4 rotate-1 bg-white dark:bg-slate-900 border border-slate-200 dark:border-slate-800 rounded-2xl px-4 py-3 shadow-sm">
-            <p class="text-xs">Available for strategic presales engagements + post-sales implementations.</p>
-          </div>
-        </div>
+<div class="relative mx-auto w-full max-w-[520px] md:max-w-[480px] lg:max-w-[360px]">
+  <div class="aspect-square rounded-3xl bg-gradient-to-br from-brand-200 to-brand-500/40 dark:from-brand-400/20 dark:to-brand-800/30 p-2">
+    <div class="w-full h-full rounded-2xl bg-white/60 dark:bg-slate-900/90 border border-slate-200 dark:border-slate-800 flex items-center justify-center p-4 overflow-hidden">
+      <img
+        src="/assets/images/fdlcheadshot.jpg"
+        alt="Franklin De La Cruz"
+        class="w-full h-full object-contain rounded-xl"
+      />
+    </div>
+  </div>
+
+  <!-- badge stays the same -->
+  <div class="absolute -bottom-6 right-4 rotate-1 bg-white dark:bg-slate-900 border border-slate-200 dark:border-slate-800 rounded-2xl px-4 py-3 shadow-sm">
+    <p class="text-xs">Available for strategic presales engagements + post-sales implementations.</p>
+  </div>
+</div>
 
         <!-- Text + Actions -->
         <div class="space-y-6">
@@ -437,4 +443,5 @@
   <script>document.getElementById('year').textContent = new Date().getFullYear();</script>
 </body>
 </html>
+
 
