--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
 
       <!-- Hero (STACKED so headshot is above resume on all screens) -->
       <section class="space-y-10">
-<!-- Consistent, proportional scaling across mobile → desktop -->
+<!-- Headshot with consistent scaling + anchored badge -->
 <div class="relative mx-auto size-[clamp(220px,28vw,360px)]">
   <div class="aspect-square rounded-3xl bg-gradient-to-br from-brand-200 to-brand-500/40 dark:from-brand-400/20 dark:to-brand-800/30 p-2">
     <div class="w-full h-full rounded-2xl bg-white/60 dark:bg-slate-900/90 border border-slate-200 dark:border-slate-800 flex items-center justify-center p-4 overflow-hidden">
@@ -93,10 +93,8 @@
       />
     </div>
   </div>
-</div>
 
-
-  <!-- badge stays the same -->
+  <!-- badge stays the same, but INSIDE the relative wrapper -->
   <div class="absolute -bottom-6 right-4 rotate-1 bg-white dark:bg-slate-900 border border-slate-200 dark:border-slate-800 rounded-2xl px-4 py-3 shadow-sm">
     <p class="text-xs">Available for strategic presales engagements + post-sales implementations.</p>
   </div>
@@ -440,6 +438,7 @@
   <script>document.getElementById('year').textContent = new Date().getFullYear();</script>
 </body>
 </html>
+
 
 
 
