--- a/index.html
+++ b/index.html
@@ -82,8 +82,9 @@
 
       <!-- Hero (STACKED so headshot is above resume on all screens) -->
       <section class="space-y-10">
-<!-- Headshot with consistent scaling + anchored badge -->
-<div class="relative mx-auto size-[clamp(220px,28vw,360px)]">
+<!-- Headshot: larger, wraps text on desktop -->
+<div class="relative mx-auto size-[clamp(240px,32vw,420px)]
+            lg:float-right lg:ml-6 lg:mb-2 lg:[shape-outside:inset(0_round_1rem)]">
   <div class="aspect-square rounded-3xl bg-gradient-to-br from-brand-200 to-brand-500/40 dark:from-brand-400/20 dark:to-brand-800/30 p-2">
     <div class="w-full h-full rounded-2xl bg-white/60 dark:bg-slate-900/90 border border-slate-200 dark:border-slate-800 flex items-center justify-center p-4 overflow-hidden">
       <img
@@ -94,11 +95,12 @@
     </div>
   </div>
 
-  <!-- badge stays the same, but INSIDE the relative wrapper -->
+  <!-- badge -->
   <div class="absolute -bottom-6 right-4 rotate-1 bg-white dark:bg-slate-900 border border-slate-200 dark:border-slate-800 rounded-2xl px-4 py-3 shadow-sm">
     <p class="text-xs">Available for strategic presales engagements + post-sales implementations.</p>
   </div>
 </div>
+
 
         <!-- Text + Actions -->
         <div class="space-y-6">
@@ -438,6 +440,7 @@
   <script>document.getElementById('year').textContent = new Date().getFullYear();</script>
 </body>
 </html>
+
 
 
 
