--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
           <div class="pt-2 flex flex-wrap gap-3">
             <a href="/assets/documents/Lead Solutions Consultant.pdf" download
                class="no-print inline-flex items-center rounded-xl bg-brand-600 text-white px-5 py-3 font-medium shadow hover:shadow-md hover:bg-brand-700"
-               title="Download PDF résumé">
+               title="Download PDF Resume">
               <svg class="w-4 h-4 mr-2" viewBox="0 0 24 24" fill="currentColor" aria-hidden="true">
                 <path d="M11 4a1 1 0 0 1 2 0v8.59l2.3-2.3 1.4 1.42L12 17.41 7.3 12.7l1.4-1.42 2.3 2.3V4zM5 19h14v2H5v-2z"/>
               </svg>
@@ -129,7 +129,8 @@
           </div>
 
           <!-- Let's Connect callout -->
-          <div class="mt-6 p-5 rounded-2xl border bg-white/80 dark:bg-slate-950/60">
+            <div class="mt-6 p-5 rounded-2xl border bg-white/80 dark:bg-slate-950/60
+            lg:clear-both lg:mt-8">
             <h3 class="text-lg font-semibold mb-3">Let’s Connect</h3>
             <div class="flex flex-wrap gap-2 text-sm">
               <a href="tel:+14078813797"
@@ -440,6 +441,7 @@
   <script>document.getElementById('year').textContent = new Date().getFullYear();</script>
 </body>
 </html>
+
 
 
 
