--- a/index.html
+++ b/index.html
@@ -183,7 +183,7 @@
           <div class="card p-6 rounded-2xl border bg-white/80 dark:bg-slate-950/50"><h3 class="font-semibold">AI & Analytics</h3><p class="text-sm mt-2">GenAI, LLMs, Prompt Engineering, Conversational Design, Predictive Analytics, NLU + GenAI orchestration.</p></div>
           <div class="card p-6 rounded-2xl border bg-white/80 dark:bg-slate-950/50"><h3 class="font-semibold">Data Platforms</h3><p class="text-sm mt-2">ETL, SQL, Hadoop, Pentaho, BI & Visualization, Integration.</p></div>
           <div class="card p-6 rounded-2xl border bg-white/80 dark:bg-slate-950/50"><h3 class="font-semibold">IT Infrastructure</h3><p class="text-sm mt-2">Virtualization, Exchange, Scripting, Server Admin, VOIP, Networking, Storage.</p></div>
-          <div class="card p-6 rounded-2xl border bg-white/80 dark:bg-slate-950/50"><h3 class="font-semibold">SaaS Platforms</h3><p class="text-sm mt-2">Sprinklr (Certified), SugarCRM (Admin), Pentaho (DI/BI), Salesforce (Admin).</p></div>
+          <div class="card p-6 rounded-2xl border bg-white/80 dark:bg-slate-950/50"><h3 class="font-semibold">SaaS Platforms</h3><p class="text-sm mt-2">Sprinklr (Certified), SugarCRM (Admin), Pentaho (DI/BI), Salesforce (Admin Certified), LivePerson, Google Workspace, Microsoft 365.</p></div>
           <div class="card p-6 rounded-2xl border bg-white/80 dark:bg-slate-950/50"><h3 class="font-semibold">Sales & Demo</h3><p class="text-sm mt-2">MEDDPICC, Challenger, Demo2Win, BANT, Beyond the Demo.</p></div>
         </div>
       </section>
@@ -411,14 +411,15 @@
         </ul>
       </section>
 
-      <!-- Interests -->
-      <section id="interests">
-        <h2 class="text-2xl md:text-3xl font-bold">Interests</h2>
+      <!-- FunFacts -->
+      <section id="funfacts">
+        <h2 class="text-2xl md:text-3xl font-bold">Fun Facts</h2>
         <ul class="mt-6 grid sm:grid-cols-2 lg:grid-cols-4 gap-4 text-slate-700 dark:text-slate-300 text-sm">
-          <li class="flex items-center gap-2 p-3 rounded-xl border bg-white/70 dark:bg-slate-950/40">AI advocacy & practice</li>
-          <li class="flex items-center gap-2 p-3 rounded-xl border bg-white/70 dark:bg-slate-950/40">Books & learning</li>
-          <li class="flex items-center gap-2 p-3 rounded-xl border bg-white/70 dark:bg-slate-950/40">Tech gadgets</li>
-          <li class="flex items-center gap-2 p-3 rounded-xl border bg-white/70 dark:bg-slate-950/40">Everest Base Camp</li>
+          <li class="flex items-center gap-2 p-3 rounded-xl border bg-white/70 dark:bg-slate-950/40">Made it to Mount Everest Base Camp</li>
+          <li class="flex items-center gap-2 p-3 rounded-xl border bg-white/70 dark:bg-slate-950/40">Had a Hit Song on the Radio</li>
+          <li class="flex items-center gap-2 p-3 rounded-xl border bg-white/70 dark:bg-slate-950/40">Was a Public School Teacher</li>
+          <li class="flex items-center gap-2 p-3 rounded-xl border bg-white/70 dark:bg-slate-950/40">Fluent In Spanish</li>
+          <li class="flex items-center gap-2 p-3 rounded-xl border bg-white/70 dark:bg-slate-950/40">Born and Raised in NYC</li>
         </ul>
       </section>
 
@@ -441,6 +442,7 @@
   <script>document.getElementById('year').textContent = new Date().getFullYear();</script>
 </body>
 </html>
+
 
 
 
