--- a/index.html
+++ b/index.html
@@ -123,9 +123,24 @@
               </svg>
               Download Resume
             </a>
-            <a href="#experience" class="inline-flex items-center rounded-xl border px-5 py-3 font-medium border-slate-300 dark:border-slate-700">
-              View experience
+            <div class="pt-2 flex flex-wrap gap-3">
+            <a href="/assets/documents/Lead Solutions Consultant.pdf" download
+               class="no-print inline-flex items-center rounded-xl bg-brand-600 text-white px-5 py-3 font-medium shadow hover:shadow-md hover:bg-brand-700"
+               title="Download PDF Resume">
+              <svg class="w-4 h-4 mr-2" viewBox="0 0 24 24" fill="currentColor" aria-hidden="true">
+                <path d="M11 4a1 1 0 0 1 2 0v8.59l2.3-2.3 1.4 1.42L12 17.41 7.3 12.7l1.4-1.42 2.3 2.3V4zM5 19h14v2H5v-2z"/>
+              </svg>
+              See Me in Action
             </a>
+            <div class="pt-2 flex flex-wrap gap-3">
+            <a href="/assets/documents/Lead Solutions Consultant.pdf" download
+               class="no-print inline-flex items-center rounded-xl bg-brand-600 text-white px-5 py-3 font-medium shadow hover:shadow-md hover:bg-brand-700"
+               title="Download PDF Resume">
+              <svg class="w-4 h-4 mr-2" viewBox="0 0 24 24" fill="currentColor" aria-hidden="true">
+                <path d="M11 4a1 1 0 0 1 2 0v8.59l2.3-2.3 1.4 1.42L12 17.41 7.3 12.7l1.4-1.42 2.3 2.3V4zM5 19h14v2H5v-2z"/>
+              </svg>
+              Technical Projects
+            </a>  
           </div>
 
           <!-- Let's Connect callout -->
@@ -442,6 +457,7 @@
   <script>document.getElementById('year').textContent = new Date().getFullYear();</script>
 </body>
 </html>
+
 
 
 
