--- a/index.html
+++ b/index.html
@@ -114,37 +114,42 @@
           </p>
 
           <!-- Actions -->
-          <div class="pt-2 flex flex-wrap gap-3">
-            <a href="/assets/documents/Lead Solutions Consultant.pdf" download
-               class="no-print inline-flex items-center rounded-xl bg-brand-600 text-white px-5 py-3 font-medium shadow hover:shadow-md hover:bg-brand-700"
-               title="Download PDF Resume">
-              <svg class="w-4 h-4 mr-2" viewBox="0 0 24 24" fill="currentColor" aria-hidden="true">
-                <path d="M11 4a1 1 0 0 1 2 0v8.59l2.3-2.3 1.4 1.42L12 17.41 7.3 12.7l1.4-1.42 2.3 2.3V4zM5 19h14v2H5v-2z"/>
-              </svg>
-              Download Resume
-            </a>
-            <div class="pt-2 flex flex-wrap gap-3">
-            <a href="#demo"
-             class="no-print inline-flex items-center rounded-xl bg-brand-600 text-white px-5 py-3 font-medium shadow hover:shadow-md hover:bg-brand-700"
-             title="See Me in Action (video reel)" aria-label="See Me in Action">
-              <svg class="w-4 h-4 mr-2" viewBox="0 0 24 24" fill="currentColor" aria-hidden="true">
-            <!-- video camera -->
-             <path d="M3 7a2 2 0 0 1 2-2h8a2 2 0 0 1 2 2v1l4-2v12l-4-2v1a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2V7z"/>
-            </svg>
-            See Me in Action
-            </a>
-            <div class="pt-2 flex flex-wrap gap-3">
-             <a href="#projects"
-             class="no-print inline-flex items-center rounded-xl bg-brand-600 text-white px-5 py-3 font-medium shadow hover:shadow-md hover:bg-brand-700"
-             title="Technical Projects" aria-label="Technical Projects">
-            <svg class="w-4 h-4 mr-2" viewBox="0 0 24 24" fill="currentColor" aria-hidden="true">
-            <!-- gear / cog -->
-            <path fill-rule="evenodd" clip-rule="evenodd"
-            d="M9.427 2.5c-.6 0-1.09.49-1.09 1.09v.79a7.7 7.7 0 0 0-1.43.83l-.56-.32a1.09 1.09 0 0 0-1.49.4l-.74 1.28c-.3.53-.12 1.2.4 1.49l.69.4c-.06.56-.06 1.15 0 1.71l-.69.4a1.09 1.09 0 0 0-.4 1.49l.74 1.28c.3.53.97.71 1.49.4l.56-.32c.45.34.93.62 1.43.83v.79c0 .6.49 1.09 1.09 1.09h1.42c.6 0 1.09-.49 1.09-1.09v-.79c.5-.21.98-.49 1.43-.83l.56.32c.52.31 1.19.13 1.49-.4l.74-1.28c.31-.52.13-1.19-.4-1.49l-.69-.4c.06-.56.06-1.15 0-1.71l.69-.4c.53-.29.71-.96.4-1.49l-.74-1.28a1.09 1.09 0 0 0-1.49-.4l-.56.32a7.7 7.7 0 0 0-1.43-.83v-.79c0-.6-.49-1.09-1.09-1.09H9.427zm2.273 5.75a3.25 3.25 0 1 1 0 6.5 3.25 3.25 0 0 1 0-6.5z"/>
-            </svg>
-            Technical Projects
-            </a>  
-          </div>
+         <div class="pt-2 flex flex-wrap gap-3">
+  <!-- 1) Download Resume -->
+  <a href="/assets/documents/Lead Solutions Consultant.pdf" download
+     class="no-print inline-flex items-center justify-center gap-2 rounded-xl bg-brand-600 text-white px-5 py-3 font-medium shadow hover:shadow-md hover:bg-brand-700
+            w-full sm:w-[220px]"
+     title="Download PDF Resume" aria-label="Download Resume">
+    <svg class="w-4 h-4" viewBox="0 0 24 24" fill="currentColor" aria-hidden="true">
+      <path d="M11 4a1 1 0 0 1 2 0v8.59l2.3-2.3 1.4 1.42L12 17.41 7.3 12.7l1.4-1.42 2.3 2.3V4zM5 19h14v2H5v-2z"/>
+    </svg>
+    <span>Download Resume</span>
+  </a>
+
+  <!-- 2) See Me in Action (video camera) -->
+  <a href="#demo"
+     class="no-print inline-flex items-center justify-center gap-2 rounded-xl bg-brand-600 text-white px-5 py-3 font-medium shadow hover:shadow-md hover:bg-brand-700
+            w-full sm:w-[220px]"
+     title="See Me in Action (video reel)" aria-label="See Me in Action">
+    <svg class="w-4 h-4" viewBox="0 0 24 24" fill="currentColor" aria-hidden="true">
+      <path d="M3 7a2 2 0 0 1 2-2h8a2 2 0 0 1 2 2v1l4-2v12l-4-2v1a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2V7z"/>
+    </svg>
+    <span>See Me in Action</span>
+  </a>
+
+  <!-- 3) Technical Projects (gear) -->
+  <a href="#projects"
+     class="no-print inline-flex items-center justify-center gap-2 rounded-xl bg-brand-600 text-white px-5 py-3 font-medium shadow hover:shadow-md hover:bg-brand-700
+            w-full sm:w-[220px]"
+     title="Technical Projects" aria-label="Technical Projects">
+    <svg class="w-4 h-4" viewBox="0 0 24 24" fill="currentColor" aria-hidden="true">
+      <path fill-rule="evenodd" clip-rule="evenodd"
+        d="M9.427 2.5c-.6 0-1.09.49-1.09 1.09v.79a7.7 7.7 0 0 0-1.43.83l-.56-.32a1.09 1.09 0 0 0-1.49.4l-.74 1.28c-.3.53-.12 1.2.4 1.49l.69.4c-.06.56-.06 1.15 0 1.71l-.69.4a1.09 1.09 0 0 0-.4 1.49l.74 1.28c.3.53.97.71 1.49.4l.56-.32c.45.34.93.62 1.43.83v.79c0 .6.49 1.09 1.09 1.09h1.42c.6 0 1.09-.49 1.09-1.09v-.79c.5-.21.98-.49 1.43-.83l.56.32c.52.31 1.19.13 1.49-.4l.74-1.28c.31-.52.13-1.19-.4-1.49l-.69-.4c.06-.56.06-1.15 0-1.71l.69-.4c.53-.29.71-.96.4-1.49l-.74-1.28a1.09 1.09 0 0 0-1.49-.4l-.56.32a7.7 7.7 0 0 0-1.43-.83v-.79c0-.6-.49-1.09-1.09-1.09H9.427zm2.273 5.75a3.25 3.25 0 1 1 0 6.5 3.25 3.25 0 0 1 0-6.5z"/>
+    </svg>
+    <span>Technical Projects</span>
+  </a>
+</div>
+
 
           <!-- Let's Connect callout -->
             <div class="mt-6 p-5 rounded-2xl border bg-white/80 dark:bg-slate-950/60
@@ -460,6 +465,7 @@
   <script>document.getElementById('year').textContent = new Date().getFullYear();</script>
 </body>
 </html>
+
 
 
 
