--- a/index.html
+++ b/index.html
@@ -192,7 +192,7 @@
       </section>
 
       <!-- Skills -->
-      <section id="skills" class="border-y border-slate-200 dark:border-slate-800 py-12 bg-slate-50 dark:bg-slate-900/40">
+      <section id="skills">
         <h2 class="text-2xl md:text-3xl font-bold">Skills</h2>
         <div class="mt-8 grid sm:grid-cols-2 lg:grid-cols-3 xl:grid-cols-4 gap-6">
           <div class="card p-6 rounded-2xl border bg-white/80 dark:bg-slate-950/50"><h3 class="font-semibold">Salesforce</h3><p class="text-sm mt-2">Implementation, Flow Automation, Objects & Fields, Security, Reports & Dashboards, Integrations.</p></div>
@@ -205,7 +205,7 @@
       </section>
 
       <!-- Awards -->
-      <section id="awards" class="border-y border-slate-200 dark:border-slate-800 py-12 bg-gradient-to-b from-brand-50/60 to-transparent dark:from-slate-900/30">
+      <section id="awards">
         <h2 class="text-2xl md:text-3xl font-bold">Awards & Career Highlights</h2>
         <p class="mt-2 text-sm text-slate-600 dark:text-slate-400">Impact metrics are in <span class="font-semibold">bold</span> for quick scanning.</p>
         <div class="mt-8 grid sm:grid-cols-2 xl:grid-cols-3 gap-6">
@@ -406,15 +406,38 @@
       <section id="training">
         <h2 class="text-2xl md:text-3xl font-bold">Technical Training & Courses</h2>
         <ul class="mt-6 grid sm:grid-cols-2 xl:grid-cols-3 gap-4 text-sm">
-          <li class="p-3 rounded-xl border bg-white/80 dark:bg-slate-950/50">API Postman — <span class="italic">In Progress</span></li>
-          <li class="p-3 rounded-xl border bg-white/80 dark:bg-slate-950/50">Microsoft Python Development — <span class="italic">In Progress</span></li>
-          <li class="p-3 rounded-xl border bg-white/80 dark:bg-slate-950/50">Gemini for Google Workspace — <span class="font-medium">Completed</span></li>
-          <li class="p-3 rounded-xl border bg-white/80 dark:bg-slate-950/50">Google AI Essentials — <span class="italic">In Progress</span></li>
-          <li class="p-3 rounded-xl border bg-white/80 dark:bg-slate-950/50">100 Days of Python Coding — <span class="italic">In Progress</span></li>
-          <li class="p-3 rounded-xl border bg-white/80 dark:bg-slate-950/50">Big Data — <span class="font-medium">Completed</span></li>
-          <li class="p-3 rounded-xl border bg-white/80 dark:bg-slate-950/50">AI Infrastructure & Operational Fundamentals — <span class="italic">In Progress</span></li>
-          <li class="p-3 rounded-xl border bg-white/80 dark:bg-slate-950/50">AI for CX with Chatbots & Analytics — <span class="italic">In Progress</span></li>
-          <li class="p-3 rounded-xl border bg-white/80 dark:bg-slate-950/50">Microsoft AI & ML Engineering — <span class="text-slate-500">Not Started</span></li>
+<!-- Completed -->
+<li class="p-3 rounded-xl border bg-white/80 dark:bg-slate-950/50">
+  Gemini for Google Workspace — <span class="font-medium">Completed</span>
+</li>
+<li class="p-3 rounded-xl border bg-white/80 dark:bg-slate-950/50">
+  Big Data — <span class="font-medium">Completed</span>
+</li>
+
+<!-- In Progress -->
+<li class="p-3 rounded-xl border bg-white/80 dark:bg-slate-950/50">
+  API Postman — <span class="italic">In Progress</span>
+</li>
+<li class="p-3 rounded-xl border bg-white/80 dark:bg-slate-950/50">
+  Microsoft Python Development — <span class="italic">In Progress</span>
+</li>
+<li class="p-3 rounded-xl border bg-white/80 dark:bg-slate-950/50">
+  Google AI Essentials — <span class="italic">In Progress</span>
+</li>
+<li class="p-3 rounded-xl border bg-white/80 dark:bg-slate-950/50">
+  100 Days of Python Coding — <span class="italic">In Progress</span>
+</li>
+<li class="p-3 rounded-xl border bg-white/80 dark:bg-slate-950/50">
+  AI Infrastructure & Operational Fundamentals — <span class="italic">In Progress</span>
+</li>
+<li class="p-3 rounded-xl border bg-white/80 dark:bg-slate-950/50">
+  AI for CX with Chatbots & Analytics — <span class="italic">In Progress</span>
+</li>
+
+<!-- Not Started -->
+<li class="p-3 rounded-xl border bg-white/80 dark:bg-slate-950/50">
+  Microsoft AI & ML Engineering — <span class="text-slate-500">Not Started</span>
+</li>
         </ul>
       </section>
 
@@ -458,6 +481,7 @@
   <script>document.getElementById('year').textContent = new Date().getFullYear();</script>
 </body>
 </html>
+
 
 
 
