--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
   </a>
 
   <!-- 3) Technical Projects (gear) -->
-  <a href="#projects"
+  <a href=/projects.html
      class="no-print inline-flex items-center justify-center gap-2 rounded-xl bg-brand-600 text-white px-5 py-3 font-medium shadow hover:shadow-md hover:bg-brand-700
             w-full sm:w-[220px]"
      title="Technical Projects" aria-label="Technical Projects">
